添加Guides详情页右侧最新指南板块

--- a/escape-from-duckov/src/locales/de.json
+++ b/escape-from-duckov/src/locales/de.json
@@ -352,7 +352,13 @@
         "viewGuide": "GUIDE ANZEIGEN >",
         "updated": "Aktualisiert"
     },
-    "GuideDetailPage": {},
+  "GuideDetailPage": {
+    "breadcrumb": "Guides",
+    "navigationTitle": "Guide-Navigation",
+    "previousGuide": "Vorheriger Guide",
+    "nextGuide": "Nächster Guide",
+    "latestTitle": "Neueste Guides"
+  },
     "SearchPage": {
         "title": "Escape from Duckov durchsuchen",
         "subtitle": "Finde alle passenden Guides, Karten, Mods, Wiki-Einträge und Items zu deinem Suchbegriff.",
